tests/dataset/tpc-ds/compiler/kotlin/q48.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/q48.kt:73:142: error: type mismatch: inferred type is Double but Boolean was expected
                                if (d.d_year == year && ((toDouble(toDouble(cd.cd_marital_status == "S" && cd.cd_education_status == "E1" && ss.sales_price) >= toDouble(100.0) && ss.sales_price) <= toDouble(150.0)) || (toDouble(toDouble(cd.cd_marital_status == "M" && cd.cd_education_status == "E2" && ss.sales_price) >= toDouble(50.0) && ss.sales_price) <= toDouble(100.0)) || (toDouble(toDouble(cd.cd_marital_status == "W" && cd.cd_education_status == "E3" && ss.sales_price) >= toDouble(150.0) && ss.sales_price) <= toDouble(200.0))) && ((toDouble(toDouble(ca.ca_state in states1 && ss.net_profit) >= 0 && ss.net_profit) <= 2000) || (toDouble(toDouble(ca.ca_state in states2 && ss.net_profit) >= 150 && ss.net_profit) <= 3000) || (toDouble(toDouble(ca.ca_state in states3 && ss.net_profit) >= 50 && ss.net_profit) <= 25000))) {
                                                                                                                                             ^
/tmp/q48.kt:73:180: error: type mismatch: inferred type is Double but Boolean was expected
                                if (d.d_year == year && ((toDouble(toDouble(cd.cd_marital_status == "S" && cd.cd_education_status == "E1" && ss.sales_price) >= toDouble(100.0) && ss.sales_price) <= toDouble(150.0)) || (toDouble(toDouble(cd.cd_marital_status == "M" && cd.cd_education_status == "E2" && ss.sales_price) >= toDouble(50.0) && ss.sales_price) <= toDouble(100.0)) || (toDouble(toDouble(cd.cd_marital_status == "W" && cd.cd_education_status == "E3" && ss.sales_price) >= toDouble(150.0) && ss.sales_price) <= toDouble(200.0))) && ((toDouble(toDouble(ca.ca_state in states1 && ss.net_profit) >= 0 && ss.net_profit) <= 2000) || (toDouble(toDouble(ca.ca_state in states2 && ss.net_profit) >= 150 && ss.net_profit) <= 3000) || (toDouble(toDouble(ca.ca_state in states3 && ss.net_profit) >= 50 && ss.net_profit) <= 25000))) {
                                                                                                                                                                                   ^
/tmp/q48.kt:73:303: error: type mismatch: inferred type is Double but Boolean was expected
                                if (d.d_year == year && ((toDouble(toDouble(cd.cd_marital_status == "S" && cd.cd_education_status == "E1" && ss.sales_price) >= toDouble(100.0) && ss.sales_price) <= toDouble(150.0)) || (toDouble(toDouble(cd.cd_marital_status == "M" && cd.cd_education_status == "E2" && ss.sales_price) >= toDouble(50.0) && ss.sales_price) <= toDouble(100.0)) || (toDouble(toDouble(cd.cd_marital_status == "W" && cd.cd_education_status == "E3" && ss.sales_price) >= toDouble(150.0) && ss.sales_price) <= toDouble(200.0))) && ((toDouble(toDouble(ca.ca_state in states1 && ss.net_profit) >= 0 && ss.net_profit) <= 2000) || (toDouble(toDouble(ca.ca_state in states2 && ss.net_profit) >= 150 && ss.net_profit) <= 3000) || (toDouble(toDouble(ca.ca_state in states3 && ss.net_profit) >= 50 && ss.net_profit) <= 25000))) {
                                                                                                                                                                                                                                                                                                              ^
/tmp/q48.kt:73:340: error: type mismatch: inferred type is Double but Boolean was expected
                                if (d.d_year == year && ((toDouble(toDouble(cd.cd_marital_status == "S" && cd.cd_education_status == "E1" && ss.sales_price) >= toDouble(100.0) && ss.sales_price) <= toDouble(150.0)) || (toDouble(toDouble(cd.cd_marital_status == "M" && cd.cd_education_status == "E2" && ss.sales_price) >= toDouble(50.0) && ss.sales_price) <= toDouble(100.0)) || (toDouble(toDouble(cd.cd_marital_status == "W" && cd.cd_education_status == "E3" && ss.sales_price) >= toDouble(150.0) && ss.sales_price) <= toDouble(200.0))) && ((toDouble(toDouble(ca.ca_state in states1 && ss.net_profit) >= 0 && ss.net_profit) <= 2000) || (toDouble(toDouble(ca.ca_state in states2 && ss.net_profit) >= 150 && ss.net_profit) <= 3000) || (toDouble(toDouble(ca.ca_state in states3 && ss.net_profit) >= 50 && ss.net_profit) <= 25000))) {
                                                                                                                                                                                                                                                                                                                                                   ^
/tmp/q48.kt:73:463: error: type mismatch: inferred type is Double but Boolean was expected
                                if (d.d_year == year && ((toDouble(toDouble(cd.cd_marital_status == "S" && cd.cd_education_status == "E1" && ss.sales_price) >= toDouble(100.0) && ss.sales_price) <= toDouble(150.0)) || (toDouble(toDouble(cd.cd_marital_status == "M" && cd.cd_education_status == "E2" && ss.sales_price) >= toDouble(50.0) && ss.sales_price) <= toDouble(100.0)) || (toDouble(toDouble(cd.cd_marital_status == "W" && cd.cd_education_status == "E3" && ss.sales_price) >= toDouble(150.0) && ss.sales_price) <= toDouble(200.0))) && ((toDouble(toDouble(ca.ca_state in states1 && ss.net_profit) >= 0 && ss.net_profit) <= 2000) || (toDouble(toDouble(ca.ca_state in states2 && ss.net_profit) >= 150 && ss.net_profit) <= 3000) || (toDouble(toDouble(ca.ca_state in states3 && ss.net_profit) >= 50 && ss.net_profit) <= 25000))) {
                                                                                                                                                                                                                                                                                                                                                                                                                                                                              ^
/tmp/q48.kt:73:501: error: type mismatch: inferred type is Double but Boolean was expected
                                if (d.d_year == year && ((toDouble(toDouble(cd.cd_marital_status == "S" && cd.cd_education_status == "E1" && ss.sales_price) >= toDouble(100.0) && ss.sales_price) <= toDouble(150.0)) || (toDouble(toDouble(cd.cd_marital_status == "M" && cd.cd_education_status == "E2" && ss.sales_price) >= toDouble(50.0) && ss.sales_price) <= toDouble(100.0)) || (toDouble(toDouble(cd.cd_marital_status == "W" && cd.cd_education_status == "E3" && ss.sales_price) >= toDouble(150.0) && ss.sales_price) <= toDouble(200.0))) && ((toDouble(toDouble(ca.ca_state in states1 && ss.net_profit) >= 0 && ss.net_profit) <= 2000) || (toDouble(toDouble(ca.ca_state in states2 && ss.net_profit) >= 150 && ss.net_profit) <= 3000) || (toDouble(toDouble(ca.ca_state in states3 && ss.net_profit) >= 50 && ss.net_profit) <= 25000))) {
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    ^
/tmp/q48.kt:73:587: error: type mismatch: inferred type is Double but Boolean was expected
                                if (d.d_year == year && ((toDouble(toDouble(cd.cd_marital_status == "S" && cd.cd_education_status == "E1" && ss.sales_price) >= toDouble(100.0) && ss.sales_price) <= toDouble(150.0)) || (toDouble(toDouble(cd.cd_marital_status == "M" && cd.cd_education_status == "E2" && ss.sales_price) >= toDouble(50.0) && ss.sales_price) <= toDouble(100.0)) || (toDouble(toDouble(cd.cd_marital_status == "W" && cd.cd_education_status == "E3" && ss.sales_price) >= toDouble(150.0) && ss.sales_price) <= toDouble(200.0))) && ((toDouble(toDouble(ca.ca_state in states1 && ss.net_profit) >= 0 && ss.net_profit) <= 2000) || (toDouble(toDouble(ca.ca_state in states2 && ss.net_profit) >= 150 && ss.net_profit) <= 3000) || (toDouble(toDouble(ca.ca_state in states3 && ss.net_profit) >= 50 && ss.net_profit) <= 25000))) {
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          ^
/tmp/q48.kt:73:610: error: type mismatch: inferred type is Double but Boolean was expected
                                if (d.d_year == year && ((toDouble(toDouble(cd.cd_marital_status == "S" && cd.cd_education_status == "E1" && ss.sales_price) >= toDouble(100.0) && ss.sales_price) <= toDouble(150.0)) || (toDouble(toDouble(cd.cd_marital_status == "M" && cd.cd_education_status == "E2" && ss.sales_price) >= toDouble(50.0) && ss.sales_price) <= toDouble(100.0)) || (toDouble(toDouble(cd.cd_marital_status == "W" && cd.cd_education_status == "E3" && ss.sales_price) >= toDouble(150.0) && ss.sales_price) <= toDouble(200.0))) && ((toDouble(toDouble(ca.ca_state in states1 && ss.net_profit) >= 0 && ss.net_profit) <= 2000) || (toDouble(toDouble(ca.ca_state in states2 && ss.net_profit) >= 150 && ss.net_profit) <= 3000) || (toDouble(toDouble(ca.ca_state in states3 && ss.net_profit) >= 50 && ss.net_profit) <= 25000))) {
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 ^
/tmp/q48.kt:73:682: error: type mismatch: inferred type is Double but Boolean was expected
                                if (d.d_year == year && ((toDouble(toDouble(cd.cd_marital_status == "S" && cd.cd_education_status == "E1" && ss.sales_price) >= toDouble(100.0) && ss.sales_price) <= toDouble(150.0)) || (toDouble(toDouble(cd.cd_marital_status == "M" && cd.cd_education_status == "E2" && ss.sales_price) >= toDouble(50.0) && ss.sales_price) <= toDouble(100.0)) || (toDouble(toDouble(cd.cd_marital_status == "W" && cd.cd_education_status == "E3" && ss.sales_price) >= toDouble(150.0) && ss.sales_price) <= toDouble(200.0))) && ((toDouble(toDouble(ca.ca_state in states1 && ss.net_profit) >= 0 && ss.net_profit) <= 2000) || (toDouble(toDouble(ca.ca_state in states2 && ss.net_profit) >= 150 && ss.net_profit) <= 3000) || (toDouble(toDouble(ca.ca_state in states3 && ss.net_profit) >= 50 && ss.net_profit) <= 25000))) {
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         ^
/tmp/q48.kt:73:707: error: type mismatch: inferred type is Double but Boolean was expected
                                if (d.d_year == year && ((toDouble(toDouble(cd.cd_marital_status == "S" && cd.cd_education_status == "E1" && ss.sales_price) >= toDouble(100.0) && ss.sales_price) <= toDouble(150.0)) || (toDouble(toDouble(cd.cd_marital_status == "M" && cd.cd_education_status == "E2" && ss.sales_price) >= toDouble(50.0) && ss.sales_price) <= toDouble(100.0)) || (toDouble(toDouble(cd.cd_marital_status == "W" && cd.cd_education_status == "E3" && ss.sales_price) >= toDouble(150.0) && ss.sales_price) <= toDouble(200.0))) && ((toDouble(toDouble(ca.ca_state in states1 && ss.net_profit) >= 0 && ss.net_profit) <= 2000) || (toDouble(toDouble(ca.ca_state in states2 && ss.net_profit) >= 150 && ss.net_profit) <= 3000) || (toDouble(toDouble(ca.ca_state in states3 && ss.net_profit) >= 50 && ss.net_profit) <= 25000))) {
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  ^
/tmp/q48.kt:73:779: error: type mismatch: inferred type is Double but Boolean was expected
                                if (d.d_year == year && ((toDouble(toDouble(cd.cd_marital_status == "S" && cd.cd_education_status == "E1" && ss.sales_price) >= toDouble(100.0) && ss.sales_price) <= toDouble(150.0)) || (toDouble(toDouble(cd.cd_marital_status == "M" && cd.cd_education_status == "E2" && ss.sales_price) >= toDouble(50.0) && ss.sales_price) <= toDouble(100.0)) || (toDouble(toDouble(cd.cd_marital_status == "W" && cd.cd_education_status == "E3" && ss.sales_price) >= toDouble(150.0) && ss.sales_price) <= toDouble(200.0))) && ((toDouble(toDouble(ca.ca_state in states1 && ss.net_profit) >= 0 && ss.net_profit) <= 2000) || (toDouble(toDouble(ca.ca_state in states2 && ss.net_profit) >= 150 && ss.net_profit) <= 3000) || (toDouble(toDouble(ca.ca_state in states3 && ss.net_profit) >= 50 && ss.net_profit) <= 25000))) {
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          ^
/tmp/q48.kt:73:803: error: type mismatch: inferred type is Double but Boolean was expected
                                if (d.d_year == year && ((toDouble(toDouble(cd.cd_marital_status == "S" && cd.cd_education_status == "E1" && ss.sales_price) >= toDouble(100.0) && ss.sales_price) <= toDouble(150.0)) || (toDouble(toDouble(cd.cd_marital_status == "M" && cd.cd_education_status == "E2" && ss.sales_price) >= toDouble(50.0) && ss.sales_price) <= toDouble(100.0)) || (toDouble(toDouble(cd.cd_marital_status == "W" && cd.cd_education_status == "E3" && ss.sales_price) >= toDouble(150.0) && ss.sales_price) <= toDouble(200.0))) && ((toDouble(toDouble(ca.ca_state in states1 && ss.net_profit) >= 0 && ss.net_profit) <= 2000) || (toDouble(toDouble(ca.ca_state in states2 && ss.net_profit) >= 150 && ss.net_profit) <= 3000) || (toDouble(toDouble(ca.ca_state in states3 && ss.net_profit) >= 50 && ss.net_profit) <= 25000))) {
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  ^
